<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *     Project: Django Hotels Android
 * Description: The Android client companion app for Django Hotels
 *     Website: http://www.muflone.com/django-hotels-android/
 *      Author: Fabio Castelli (Muflone) <muflone@muflone.com>
 *   Copyright: 2018-2026 Fabio Castelli
 *     License: GPL-3+
 * Source code: https://github.com/muflone/django-hotels-android
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <!-- Application values -->
    <string name="app_description">Get your Hotel activities done</string>

    <!-- Generic descriptions -->
    <string name="dismiss">Dismiss</string>
    <string name="description">Description</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="employee">Employee</string>
    <string name="contract">Contract</string>

    <!-- Home section -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_home">Home</string>
    <string name="section_scanner">Scan</string>
    <string name="section_structures">Structures</string>
    <string name="section_extras">Extra</string>
    <string name="section_reports">Reports</string>
    <string name="section_sync">Synchronization</string>
    <string name="section_settings">Settings</string>
    <string name="section_about">About</string>

    <string name="missing_tablet_id">Missing Tablet ID, please set it in the settings before the use</string>
    <string name="missing_tablet_key">Missing Tablet key, please set it in the settings before the use</string>
    <string name="press_back_again_to_exit">Press back button again to exit</string>
    <string name="select_a_structure">Select a structure</string>
    <string name="no_available_structures">No available structure</string>

    <!-- Scan section -->
    <string name="scan_prompt">Scan your personal QR Code</string>
    <string name="scan_register_enter">Register ENTER</string>
    <string name="scan_register_exit">Register EXIT</string>
    <string name="scan_latest_timestamps">Latest timestamps</string>
    <string name="scan_transmission_status">Transmission status</string>
    <string name="scan_unknown_employee">Unknown employee</string>
    <string name="scan_unsupported_qrcode">Unsupported QR Code</string>

    <!-- Structures section -->
    <string name="employee_id_label">ID:</string>
    <string name="employee_first_name_label">First name:</string>
    <string name="employee_last_name_label">Last name:</string>
    <string name="employee_gender_label">Gender</string>
    <string name="contract_id_label">ID:</string>
    <string name="contract_company_label">Company:</string>
    <string name="contract_status_label">Status:</string>
    <string name="contract_type_label">Type:</string>
    <string name="contract_daily_hours_label">Daily hours:</string>
    <string name="contract_weekly_hours_label">Weekly hours:</string>
    <string name="contract_start_date_label">Start date:</string>
    <string name="contract_end_date_label">End date:</string>

    <string name="empty_service">Nothing</string>

    <string name="structures_marked_timestamp_as_untransmitted">Marked timestamp as untransmitted</string>
    <string name="structures_marked_activity_as_untransmitted">Marked activity as untransmitted</string>
    <string name="structures_unable_to_change_transmitted_activity">Unable to modify an already transmitted activity</string>
    <string name="structures_unable_to_use_contract">Unable to use the contract</string>
    <string name="structures_select_a_service_room">Select a service for the room</string>
    <string name="structures_employees_already_assigned">Employees already assigned</string>
    <string name="structures_employee_set_conditions">Assign one or more conditions to the employee</string>

    <!-- Extras section -->
    <string name="extras_activities">Extra activities</string>
    <string name="extras_add_new_extra">Add a new extra</string>
    <string name="extras_time_zero">Nothing</string>
    <string name="extras_time_minutes">%1$d minutes</string>
    <string name="extras_time_hour_minutes">%1$d hour and %2$d minutes</string>
    <string name="extras_time_hour">%1$d hour</string>
    <string name="extras_time_hours_minutes">%1$d hours and %2$d minutes</string>
    <string name="extras_time_hours">%1$d hours</string>
    <string name="extras_unable_to_change_transmitted_activity">Unable to modify an already transmitted extra</string>
    <string name="extras_unable_to_use_contract">Unable to use the contract</string>
    <string name="extras_max_number_of_extras">Max number of extras reached, unable to add a new extra</string>
    <string name="extras_no_extras_allowed">No extras are allowed for this structure</string>
    <string name="extras_marked_extra_as_untransmitted">Marked extra as untransmitted</string>

    <!-- Reports section -->
    <string name="report_timestamps">Timestamps</string>
    <string name="report_activities">Activities</string>
    <string name="report_loading1">The report is currently loading, please wait</string>
    <string name="report_loading2">Elapsed time: %1$d seconds</string>

    <!-- Settings section -->
    <string name="settings_tablet">Tablet settings</string>

    <string name="settings_tablet_id_title">Tablet ID</string>
    <string name="settings_tablet_id_summary">This field will contain the tablet ID</string>

    <string name="settings_tablet_key_title">Tablet Key</string>
    <string name="settings_tablet_key_summary">This is the key used to communicate with the server</string>

    <string name="settings_server">Server settings</string>

    <string name="settings_api_url_title">API URL</string>
    <string name="settings_api_url_summary">This is the server URL to connect</string>

    <string name="settings_scan">Scan settings</string>

    <string name="settings_scan_beep_title">Beep after scan</string>
    <string name="settings_scan_beep_summary">Enable beep after a successful scan</string>

    <string name="settings_scan_orientation_lock_title">Lock orientation during scan</string>
    <string name="settings_scan_orientation_lock_summary">Lock the screen orientation during the scan process</string>

    <string name="settings_structures">Structures settings</string>

    <!-- Sync section -->
    <string name="sync_step_started">Synchronization started</string>
    <string name="sync_step_server_status">Checking server status</string>
    <string name="sync_step_date_time">Checking device date and time</string>
    <string name="sync_step_timestamps_transmission">Timestamps transmission</string>
    <string name="sync_step_activities_transmission">Activities transmission</string>
    <string name="sync_step_extras_transmission">Extras transmission</string>
    <string name="sync_step_get_data">Data download</string>
    <string name="sync_step_saving_data">Saving data</string>
    <string name="sync_step_completed">Synchronization completed</string>
    <string name="sync_error_no_server_connection">Unable to establish connection with the server, please check your internet connection</string>
    <string name="sync_error_invalid_date_time">Invalid date or time, please check system settings</string>
    <string name="sync_error_unable_to_download">Unable to download data from the server</string>
    <string name="sync_error_invalid_server_status">Invalid server status, maybe the server is not ready</string>
    <string name="sync_error_invalid_server_status_detail">Server status: %1$s</string>
    <string name="sync_error_invalid_server_response">Invalid response from the server, please check your internet connection</string>
    <string name="sync_error_retransmitted_response">The activity was already transmitted and it\'s refused from the server</string>
    <string name="sync_error_retransmitted_quantity">An activity was already transmitted with a different quantity\nEmployee: %1$s %2$s\nStructure: %3$s\nBuilding: %4$s\nRoom: %5$s\nDate: %6$s\nQuantity: %7$d</string>
    <string name="sync_error_retransmitted_description">Activity was already transmitted with a different description\nEmployee: %1$s %2$s\nStructure: %3$s\nBuilding: %4$s\nRoom: %5$s\nDate: %6$s\nDescription: %7$s</string>

    <!-- About section -->
    <string name="about_contacts">Contacts</string>
    <string name="about_license">License</string>
    <string name="about_app_license">License GPL-3+</string>
    <string name="about_credits">Credits</string>
    <string name="about_application_information">Application information</string>
    <string name="about_settings_information">Settings information</string>
    <string name="about_system_information">System information</string>
    <string name="about_configured_commands">Configured commands for the context %1$s</string>
    <string name="about_configured_commands_format" translatable="false">ID: %d\nName: %s\nType: %s\nUses: %d/%d</string>
    <string name="about_configured_commands_none">There are no configured commands</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_tools">Tools</string>

    <string name="about_application_information_name">Application name</string>
    <string name="about_application_information_version">Application version</string>
    <string name="about_application_information_package">Application package</string>

    <string name="about_system_information_android">Android version: %1$s %2$s</string>
    <string name="about_system_information_sdk">SDK API Level</string>
    <string name="about_system_information_rom">ROM version</string>
    <string name="about_system_information_kernel">Kernel version</string>
    <string name="about_system_information_architecture">Architecture</string>
    <string name="about_system_information_manufacturer">Manufacturer</string>
    <string name="about_system_information_model">Model</string>
    <string name="about_system_information_product">Product</string>
    <string name="about_system_information_brand">Brand</string>
    <string name="about_system_information_device">Device</string>
    <string name="about_system_information_timezone">Timezone: %1$s (%2$s)</string>
    <string name="about_system_information_resolution">Resolution: %1$sx%2$s (%3$s DPI)</string>
    <string name="about_system_information_android_id">Android ID</string>
    <string name="about_system_information_user_agent">User Agent</string>

    <string name="about_feedback_copy_details">Copy details</string>
    <string name="about_feedback_copied_to_clipboard">Copied data to clipboard</string>
    <string name="about_feedback_email_details">Send an e-mail to the author with the details</string>
    <string name="about_feedback_email_details_with_attached_db">Send an e-mail to the author with details and a database backup</string>

    <string name="about_tools_database_backup">Execute a data backup</string>
    <string name="about_tools_database_backup_done">A copy of the database was made</string>
</resources>