<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewEmployee"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_weight="0.3"
    android:rotation="0"
    app:cardBackgroundColor="@color/color_employee_detail_background"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/structures_fragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/employeeIdLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/employee_id_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employeeLabel" />

        <TextView
            android:id="@+id/employeeIdView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/employeeIdLabel"
            app:layout_constraintEnd_toStartOf="@+id/employeeGenderImageView"
            app:layout_constraintStart_toEndOf="@+id/employeeFirstNameLabel"
            tools:text="ID" />

        <TextView
            android:id="@+id/employeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/employeeFirstNameLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/employee_first_name_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/employeeIdLabel"
            app:layout_constraintStart_toStartOf="@+id/employeeIdLabel"
            app:layout_constraintTop_toBottomOf="@+id/employeeIdLabel" />

        <TextView
            android:id="@+id/employeeFirstNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/employeeFirstNameLabel"
            app:layout_constraintEnd_toStartOf="@+id/employeeGenderImageView"
            app:layout_constraintStart_toEndOf="@+id/employeeFirstNameLabel"
            tools:text="FIRST NAME" />

        <TextView
            android:id="@+id/employeeLastNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/employee_last_name_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/employeeFirstNameLabel"
            app:layout_constraintStart_toStartOf="@+id/employeeFirstNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/employeeFirstNameLabel" />

        <TextView
            android:id="@+id/employeeLastNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/employeeLastNameLabel"
            app:layout_constraintEnd_toEndOf="@+id/employeeFirstNameView"
            app:layout_constraintStart_toStartOf="@+id/employeeFirstNameView"
            tools:text="LAST NAME" />

        <ImageView
            android:id="@+id/employeeGenderImageView"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/employee_gender_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/employeeLabel"
            tools:srcCompat="@drawable/ic_gender_unknown" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>