<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *     Project: Django Hotels Android
 * Description: The Android client companion app for Django Hotels
 *     Website: http://www.muflone.com/django-hotels-android/
 *      Author: Fabio Castelli (Muflone) <muflone@muflone.com>
 *   Copyright: 2018-2019 Fabio Castelli
 *     License: GPL-3+
 * Source code: https://github.com/muflone/django-hotels-android
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
-->
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewContract"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="@color/color_employee_detail_background"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardViewEmployee"
    tools:showIn="@layout/structures_fragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/contractLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contract"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contractIdLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contract_id_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contractLabel" />

        <TextView
            android:id="@+id/contractIdView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractIdLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contractCompanyLabel"
            tools:text="ID" />

        <TextView
            android:id="@+id/contractCompanyLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contract_company_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/contractIdLabel"
            app:layout_constraintStart_toStartOf="@+id/contractIdLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractIdLabel" />

        <TextView
            android:id="@+id/contractCompanyView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractCompanyLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractIdView"
            app:layout_constraintStart_toStartOf="@+id/contractIdView"
            tools:text="COMPANY" />

        <TextView
            android:id="@+id/contractStatusLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contract_status_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/contractCompanyLabel"
            app:layout_constraintStart_toStartOf="@+id/contractCompanyLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractCompanyLabel" />

        <TextView
            android:id="@+id/contractStatusView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractStatusLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractCompanyView"
            app:layout_constraintStart_toStartOf="@+id/contractCompanyView"
            tools:text="CONTRACT STATUS" />

        <TextView
            android:id="@+id/contractTypeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contract_type_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/contractStatusLabel"
            app:layout_constraintStart_toStartOf="@+id/contractStatusLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractStatusLabel" />

        <TextView
            android:id="@+id/contractTypeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractTypeLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractStatusView"
            app:layout_constraintStart_toStartOf="@+id/contractStatusView"
            tools:text="CONTRACT TYPE" />

        <TextView
            android:id="@+id/contractDailyHoursLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contract_daily_hours_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/contractTypeLabel"
            app:layout_constraintStart_toStartOf="@+id/contractTypeLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractTypeLabel" />

        <TextView
            android:id="@+id/contractDailyHoursView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractDailyHoursLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractTypeView"
            app:layout_constraintStart_toStartOf="@+id/contractTypeView"
            tools:text="DAILY HOURS" />

        <TextView
            android:id="@+id/contractWeeklyHoursLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contract_weekly_hours_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/contractDailyHoursLabel"
            app:layout_constraintStart_toStartOf="@+id/contractDailyHoursLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractDailyHoursLabel" />

        <TextView
            android:id="@+id/contractWeeklyHoursView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractWeeklyHoursLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractDailyHoursView"
            app:layout_constraintStart_toStartOf="@+id/contractDailyHoursView"
            tools:text="WEEKLY HOURS" />

        <TextView
            android:id="@+id/contractStartDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contract_start_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/contractWeeklyHoursLabel"
            app:layout_constraintStart_toStartOf="@+id/contractDailyHoursLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractWeeklyHoursLabel" />

        <TextView
            android:id="@+id/contractStartDateView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractStartDateLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractWeeklyHoursView"
            app:layout_constraintStart_toStartOf="@+id/contractWeeklyHoursView"
            tools:text="START DATE" />

        <TextView
            android:id="@+id/contractEndDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/contract_end_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/contractStartDateLabel"
            app:layout_constraintStart_toStartOf="@+id/contractStartDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/contractStartDateLabel" />

        <TextView
            android:id="@+id/contractEndDateView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/contractEndDateLabel"
            app:layout_constraintEnd_toEndOf="@+id/contractStartDateView"
            app:layout_constraintStart_toStartOf="@+id/contractStartDateView"
            tools:text="END DATE" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>